fixed sonar search relocation, fixed edit about us bug, added navigations from sonar search to user, events, sales listing, service available and service required

--- a/src/app/core/components/post/post-items/post-items.component.html
+++ b/src/app/core/components/post/post-items/post-items.component.html
@@ -61,8 +61,8 @@
       <ion-text>
         <div *ngIf="post.PostDescription.length <= 500">
           <p>
-            Hello this isme in temple with my family on holiday hahahahah
-            <!-- {{post.PostDescription}} -->
+            <!-- Hello this isme in temple with my family on holiday hahahahah -->
+            {{post.PostDescription}}
           </p>
         </div>
 
