--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -2,9 +2,10 @@
 
 <ion-row class="firstrow">
 
-  <img [ngClass]="{'userimg': currentItem.entity !== 'U', 'userimgevent': currentItem.entity != 'U'}" class="userimg"
-    src="{{appConstants.mediaPrefix + (currentItem.ProfilePhoto || currentItem.Image) }}"
-    onError="this.src='assets/custom-ion-icons/trait_thumnail.svg'" />
+  <img *ngIf="currentItem.entity !='U' " (click)="open(currentItem)" [ngClass]="{'userimg': currentItem.entity !== 'U', 'userimgevent': currentItem.entity !== 'U'}" class="userimg"
+    src="{{appConstants.mediaPrefix + (currentItem.Image) }}"
+    onError="this.src='assets/custom-ion-icons/trait_thumnail.svg'"
+     />
   <ion-icon name="close-icon" class="closecross" (click)="closeDetails()"></ion-icon>
 
 
@@ -143,7 +144,7 @@
   </ion-card-content> -->
   <ion-row class="secondrow">
 
-    <ion-card (click)="openUser(currentItem)" class="header-card2" *ngIf="currentItem.entity !='U' "
+    <ion-card (click)="open(currentItem)" class="header-card2" *ngIf="currentItem.entity !='U' "
       style="background-color:  #EAF1F4;">
 
       <ion-card-header class="eventcard" style="background-color:  #EAF1F4;">
