--- a/src/app/pages/sidemenu/sales-listing/sales-item-view/sales-item-view.page.html
+++ b/src/app/pages/sidemenu/sales-listing/sales-item-view/sales-item-view.page.html
@@ -12,7 +12,7 @@
   <ion-list>
     <ion-item lines="none">
       <ion-avatar slot="start">
-        <ion-img alt="Logo" src="https://ionicframework.com/docs/img/demos/avatar.svg"></ion-img>
+        <ion-img alt="Logo" src=""></ion-img>
       </ion-avatar>
       <ion-label>
         <h3>{{logInfo.DisplayName}}</h3>
