--- a/src/app/pages/map/marker-detail/marker-detail.component.scss
+++ b/src/app/pages/map/marker-detail/marker-detail.component.scss
@@ -86,7 +86,7 @@
 ion-card {
   background-color: #EAF1F4;
   box-shadow: none;
-  border-radius: 20px !important;
+  border-radius: 30px !important;
   z-index: 0;
   transform: translateY(-19px);
 }
@@ -119,7 +119,7 @@ ion-card {
   }
 } */
 .header-card {
-  width: 345px;
+  width: 307px;
   height: 204px;
 
 
@@ -560,8 +560,9 @@ ion-img::part(image){
   display: flex;
   justify-content: center;
   align-items: center;
+  // width: 307px;
 // height: 20px;
-  position: relative;
+  // position: relative;
 }
 .back{
   position: absolute;
@@ -573,7 +574,7 @@ color: black;
 }
 .back2{
   position: absolute;
-  top:63px ;
+  top:112px ;
   left: 11px;
   width: 30px;
    height: 79px;
@@ -589,7 +590,7 @@ color: black;
 }
 .front2{
   position: absolute;
-  top:63px ;
+  top:112px ;
   right: 11px;
   width: 30px;
   height: 79px;
@@ -762,4 +763,17 @@ border: 1px solid var(--unnamed-color-707070);
 box-shadow: -1px 3px 6px #000000B8;
 border: 1px solid #707070;
 border-radius: 24px;
+}
+
+.eventname{
+  font: var(--unnamed-font-style-normal) normal bold 25px/24px var(--unnamed-font-family-sf-pro-display);
+  font: normal normal bold 25px/24px SF Pro Display;
+letter-spacing: 0.4px;
+color: #285078;
+opacity: 1;
+}
+
+.eventdate , .eventtime{
+  font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 16px/19px var(--unnamed-font-family-sf-pro-display);
+  letter-spacing: 0.25px;
 }
