--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -74,7 +74,7 @@
     </ion-card-header>
 
 
-<!--     <ion-card-content>
+    <ion-card-content>
 
       <ion-row class="header-card-details">
         <ion-button shape="round" size="small" color="light" class="endorsement-btn connectios" (click)="tempClick()">
@@ -118,7 +118,7 @@
   <ion-chip class="person_trait" color="primary">Event creating</ion-chip>
   <ion-chip class="person_trait" color="primary">Reading Books</ion-chip>
   <ion-chip class="person_trait" color="primary">Stiching</ion-chip>
-</div> -->
+</div>
 
 <!-- <div *ngIf="currentItem.entity=='U' && currentItem.UserTypeId==2">
 
