updated post-view ui, fixed logout bug, fixed profile pic ratio issue, fixed loading bar in reg search, fixed account type ui in privacy seeting

--- a/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
+++ b/src/app/pages/home/free-user-canvas/free-user-canvas.page.scss
@@ -54,7 +54,7 @@ ion-content {
         height: 116px;
         border: 4px solid #fff;
         border-radius: 50%;
-        object-fit: cover;
+        // object-fit: cover;
       }
 
       &>ion-img {
