--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -102,7 +102,7 @@
           <span> Sonar</span>
         </ion-button>
       </ion-row>
-    <!-- </ion-card-content> -->
+    </ion-card-content>
   </ion-card>
   <ion-icon *ngIf="showNext" name="chevron-forward-circle-outline" class="front"
     (click)="loadNextItem(false)"></ion-icon>
