--- a/src/app/pages/sidemenu/settings-privacy/settings-privacy.page.html
+++ b/src/app/pages/sidemenu/settings-privacy/settings-privacy.page.html
@@ -11,7 +11,7 @@
 <ion-content>
   <ng-container *ngIf="loaded">
 
-    <!-- <ion-toolbar>
+    <ion-toolbar>
       <ion-text>Account Type</ion-text>
     </ion-toolbar>
 
@@ -60,7 +60,7 @@
           (ionChange)="handleToggleChange($event, 'G')"
         ></ion-toggle>
       </ion-item>
-    </ion-list> -->
+    </ion-list>
     
     <!-- <ion-list>
       <ion-item lines="none">
@@ -87,7 +87,7 @@
         </ion-text>
         <ion-toggle slot="end" [checked]=" check_G"  (ionChange)="handleToggleChange($event,'G')"></ion-toggle>
       </ion-item>
-    </ion-list> -->
+    </ion-list>
 
     <ion-toolbar>
       <ion-buttons slot="primary">
@@ -97,7 +97,7 @@
     </ion-toolbar>
     <div class="settingsline"></div>
 
-    <!-- <ion-list>
+    <ion-list>
       <ion-item lines="none">
         <ion-text>
           <h3>Sonar location visible to</h3>
