fixed logout bug, fixed trait post, implemented multiple marker tray, fixed event creation and update issues, changed service required, available create icon

--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -65,11 +65,11 @@
           <ion-icon style="font-size: 35px;" name="flame-active"></ion-icon>
         </ion-fab-button> -->
 
-        <ion-fab-button (click)="onMapResultsClick()"
+        <!-- <ion-fab-button (click)="onMapResultsClick()"
           *ngIf="userMarkers.length>0||totemMarkers.length>0 && totemMarkersOnSerach.length>0" size="small"
           ng-reflect-size="small" class="md ion-activatable ion-focusable fab-button-small hydrated map-fab-button2">
           <ion-icon name="bluemenu"></ion-icon>
-        </ion-fab-button>
+        </ion-fab-button> -->
 
         <ion-fab-button (click)="onClickGetCurrentPosition()" class="map-fab-button2">
           <ion-icon style="font-size: 35px;" name="bluecur"></ion-icon>
