--- a/src/app/pages/sidemenu/finitee-services/service-available/service-available-list/service-available-list.page.html
+++ b/src/app/pages/sidemenu/finitee-services/service-available/service-available-list/service-available-list.page.html
@@ -162,7 +162,7 @@
   <br>
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button color="primary" (click)="create()">
-      <ion-icon class="add-post-icon" name="add"></ion-icon>
+      <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 </ion-content>
