--- a/src/app/pages/map/map-result/map-result.component.html
+++ b/src/app/pages/map/map-result/map-result.component.html
@@ -30,7 +30,9 @@
   </div>
 </ion-header>
 <ion-content>
-  <ion-accordion-group multiple="true" [value]="['user', 'business', 'nonprofit', 'donation', 'totems', 'salesListings']">
+  <ion-accordion-group multiple="true" [value]="['user', 'business', 'nonprofit', 'donation', 'totems', 'salesListings', 'serviceAvailable', 'serviceRequired', 'events']">
+
+    <!-- USERS -->
     <ion-accordion value="user" toggleIcon="accordion-icon">
       <ion-item slot="header">
         <ion-icon name="blueuser"></ion-icon>
@@ -44,14 +46,16 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                  <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                  <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
               onError="this.src='assets/icons/business/anonymous.svg'"/>
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
-                <span class="font-sz-14">{{user['DisplayName']}}</span>
+                <span class="font-sz-14">{{user['FirstName']}}{{user['LastName']}}</span>
               </div>
             </div>
-
+            <div class="font-primary-text" (click)="viewConnection(user)">
+              <span class="font-sz-14">{{user['TotalPosts']}}Posts-{{user['TotalConnections']}}Connections</span>
+            </div>
             <div class="display-flex--row flex-align-center">
               <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']| number
                 : '1.2-2' }} Miles away </div>
@@ -67,6 +71,8 @@
         </div>
       </div>
     </ion-accordion>
+
+    <!-- BUSINESSES -->
     <ion-accordion value="business" toggleIcon="accordion-icon">
       <ion-item slot="header">
         <ion-icon name="bluebusiness"></ion-icon>
@@ -103,6 +109,8 @@
         </div>
       </div>
     </ion-accordion>
+
+    <!-- NON PROFITS -->
     <ion-accordion value="nonprofit" toggleIcon="accordion-icon">
       <ion-item slot="header">
         <ion-icon name="nonprofit"></ion-icon>
@@ -139,6 +147,8 @@
         </div>
       </div>
     </ion-accordion>
+
+    <!-- DONATIONS -->
     <ion-accordion value="donation" toggleIcon="accordion-icon">
       <ion-item slot="header">
         <ion-icon name="donation"></ion-icon>
@@ -175,6 +185,8 @@
         </div>
       </div>
     </ion-accordion>
+
+    <!-- TOTEMS -->
     <ion-accordion value="totems" toggleIcon="accordion-icon">
       <ion-item slot="header">
         <ion-icon name="bluetotem"></ion-icon>
@@ -211,6 +223,8 @@
         </div>
       </div>
     </ion-accordion>
+
+    <!-- SALES LISTING -->
     <ion-accordion value="salesListings" toggleIcon="accordion-icon">
       <ion-item slot="header">
         <ion-icon name="sales_listing"></ion-icon>
@@ -247,7 +261,121 @@
         </div>
       </div>
     </ion-accordion>
-    </ion-accordion-group>
+
+    <!-- SERVICE AVAILABLE -->
+    <ion-accordion value="serviceAvailable" toggleIcon="accordion-icon">
+      <ion-item slot="header">
+        <ion-icon name="sales_listing"></ion-icon>
+        <ion-label>Service Available ({{serviceAvailable.length}})</ion-label>
+      </ion-item>
+      <div slot="content">
+        <div *ngFor="let user of serviceAvailable;let i=index">
+          <div class="lines-bottom ion-padding">
+            <div class="display-flex--row flex-align-center">
+              <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
+                <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
+                  onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
+                  alt="User Profile"> -->
+                  <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['Image']}}"
+              onError="this.src='assets/icons/business/anonymous.svg'"/>
+              </ion-avatar>
+              <div class="font-primary-text" (click)="viewConnection(user)">
+                <span class="font-sz-14">{{user['DisplayName']}}</span>
+              </div>
+            </div>
+
+            <div class="display-flex--row flex-align-center">
+              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']| number
+                : '1.2-2' }} Miles away </div>
+              <div class="action-list">
+                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
+                [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
+                <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+                <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ion-accordion>
+
+    <!-- SERVICE REQUIRED -->
+    <ion-accordion value="serviceRequired" toggleIcon="accordion-icon">
+      <ion-item slot="header">
+        <ion-icon name="sales_listing"></ion-icon>
+        <ion-label>Service Required ({{serviceRequired.length}})</ion-label>
+      </ion-item>
+      <div slot="content">
+        <div *ngFor="let user of serviceRequired;let i=index">
+          <div class="lines-bottom ion-padding">
+            <div class="display-flex--row flex-align-center">
+              <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
+                <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
+                  onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
+                  alt="User Profile"> -->
+                  <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
+              onError="this.src='assets/icons/business/anonymous.svg'"/>
+              </ion-avatar>
+              <div class="font-primary-text" (click)="viewConnection(user)">
+                <span class="font-sz-14">{{user['DisplayName']}}</span>
+              </div>
+            </div>
+
+            <div class="display-flex--row flex-align-center">
+              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']| number
+                : '1.2-2' }} Miles away </div>
+              <div class="action-list">
+                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
+                [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
+                <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+                <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ion-accordion>
+
+    <!-- EVENTS -->
+    <ion-accordion value="events" toggleIcon="accordion-icon">
+      <ion-item slot="header">
+        <ion-icon name="sales_listing"></ion-icon>
+        <ion-label>Events ({{events.length}})</ion-label>
+      </ion-item>
+      <div slot="content">
+        <div *ngFor="let user of events;let i=index">
+          <div class="lines-bottom ion-padding">
+            <div class="display-flex--row flex-align-center">
+              <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
+                <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
+                  onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
+                  alt="User Profile"> -->
+                  <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
+              onError="this.src='assets/icons/business/anonymous.svg'"/>
+              </ion-avatar>
+              <div class="font-primary-text" (click)="viewConnection(user)">
+                <span class="font-sz-14">{{user['DisplayName']}}</span>
+              </div>
+            </div>
+
+            <div class="display-flex--row flex-align-center">
+              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']| number
+                : '1.2-2' }} Miles away </div>
+              <div class="action-list">
+                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
+                [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
+                <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+                <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ion-accordion>
+  </ion-accordion-group>
   <!-- <div class="mapreslist">
     <ion-list style="padding:0px">
       <div
