--- a/src/app/pages/sidemenu/finitee-services/service-required/service-required-list/service-required-list.page.scss
+++ b/src/app/pages/sidemenu/finitee-services/service-required/service-required-list/service-required-list.page.scss
@@ -83,8 +83,8 @@ ion-content {
       --transform: rotate(45deg);
       --box-shadow: none;
       & > ion-icon {
-        height: 70%;
-        width: 70%;
+        // height: 70%;
+        // width: 70%;
         transform: rotate(45deg);
       }
     }
