--- a/src/app/pages/sidemenu/events/event-list/event-list.page.scss
+++ b/src/app/pages/sidemenu/events/event-list/event-list.page.scss
@@ -88,10 +88,10 @@ ion-content {
       }
     }
   }
-  .ion-align-items-center{
+  // .ion-align-items-center{
   
     
-  }
+  // }
 }
 
 ion-segment-button.segment-button-checked ion-label {
