--- a/src/app/pages/post/update-post/update-post.component.html
+++ b/src/app/pages/post/update-post/update-post.component.html
@@ -4,7 +4,7 @@
       <ion-back-button icon="back-button">
       </ion-back-button>
     </ion-buttons>
-    <ion-title>Update Post</ion-title>
+    <ion-title>Edit Post</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -25,10 +25,7 @@
   </ion-segment>
 
   <div class="post">
-    <app-multiple-media-upload 
-   
-      (filePathEvent)="addMedia($event)">
-    </app-multiple-media-upload>
+
     
     <!-- <p>{{paramsData.selectedPost.PostDescription}}</p> -->
     <ion-slides *ngIf="paramsData.selectedPost.PostImages && paramsData.selectedPost.PostImages.length>0">
@@ -46,9 +43,13 @@
       placeholder="Type description here">{{paramsData.selectedPost.PostDescription}}</ion-textarea>
   </ion-item>
 
-  
+  <app-multiple-media-upload 
+   
+(filePathEvent)="addMedia($event)">
+</app-multiple-media-upload>
 
 </ion-content>
+
 
 <ion-footer class="create-btn">
   <ion-button shape="round" expand="block" (click)="edit_post()">Edit Post</ion-button>
