--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -1,6 +1,6 @@
 <ion-content style="border-radius: 100px 100px 0 0;">
   <div style="width: 100%;height:100%;" class="whiteblue">
-    <div class="mapclass" style="position: relative;height: 100%;width:100%; overflow: hidden;">
+    <div *ngIf="isLocationTurnedOn === true" class="mapclass" style="position: relative;height: 100%;width:100%; overflow: hidden;">
 
       <div class="top-result-container">
         <div class="c-fab-button" *ngIf="searchCriteria">
@@ -40,7 +40,7 @@
       </div>
       <div id="map_canvas" #map_canvas style="height:100%;"> </div>
 
-      <div *ngIf="islocationEnabled == true" class="icons-list" style="display: flex;flex-direction: column;gap: 10px;align-items: center;">
+      <div *ngIf="isLocationTurnedOn == true" class="icons-list" style="display: flex;flex-direction: column;gap: 10px;align-items: center;">
 
         <ion-fab-button (click)="openSonarSetting()" *ngIf="isBackEnabled && user?.UserTypeId == '1'"
           class="map-fab-button2">
@@ -85,7 +85,7 @@
 
       </div>
     </div>
-    <div *ngIf="islocationEnabled==false">
+    <div *ngIf="isLocationTurnedOn==false">
       <div class="permission-message">
         <p class="darkbf" style="margin-bottom: 0px;">To see places near you, turn on location services.</p>
         <p class="darkbf" style="margin-top: 9px;">You can also search friends with greetings.</p>
