--- a/src/app/pages/sidemenu/shopping-listing/create-edit-shopping-list/create-edit-shopping-list.page.html
+++ b/src/app/pages/sidemenu/shopping-listing/create-edit-shopping-list/create-edit-shopping-list.page.html
@@ -48,8 +48,11 @@
             <ion-col size="3">
               <!-- Condition Field -->
               <ion-item  id="pop-condition-{{i}}" color="none" class="input" lines="none">
-                <ion-input  type="text" readonly style="text-align: center; font-size: 12px;" name="Condition{{i}}"
-                  [(ngModel)]="shoppingItem.Condition"></ion-input>
+                <p style="text-align: center; font-size: 12px;" *ngIf="shoppingItem.Condition">{{commonService.getCondition(shoppingItem.Condition)}}</p>
+                <h3 *ngIf="!shoppingItem.Condition">select</h3>
+                <!-- <ion-input  type="text" readonly style="text-align: center; font-size: 12px;" name="Condition{{i}}"
+                  [(ngModel)]="shoppingItem.Condition">
+                </ion-input> -->
               </ion-item>
             </ion-col>
             <ion-col size="2.8">
@@ -76,8 +79,8 @@
             <ion-radio-group [value]="shoppingItem.Condition" name="Condition{{i}}" [(ngModel)]="shoppingItem.Condition"
               mode="md">
               <ion-item lines="none" *ngFor="let condition of conditionList">
-                <ion-label [ngClass]="{'selected': (shoppingItem.Condition==condition)}">{{condition}}</ion-label>
-                <ion-radio slot="start" value="{{condition}}"></ion-radio>
+                <ion-label [ngClass]="{'selected': (shoppingItem.Condition==condition.title)}">{{condition.title}}</ion-label>
+                <ion-radio slot="start" value="{{condition.value}}"></ion-radio>
               </ion-item>
             </ion-radio-group>
           </ion-list>
