--- a/src/app/pages/post/update-post/update-post.component.html
+++ b/src/app/pages/post/update-post/update-post.component.html
@@ -33,15 +33,15 @@
         <ion-img src="https://finitee.sgp1.digitaloceanspaces.com/{{postImage}}"></ion-img>
       </ion-slide>
     </ion-slides>
-    <ion-card *ngIf="paramsData.selectedPost.PostImages && paramsData.selectedPost.PostImages.length==0" class="descriptionPost bg5">
+    <!-- <ion-card *ngIf="paramsData.selectedPost.PostImages && paramsData.selectedPost.PostImages.length==0" class="descriptionPost bg5">
       <h3> {{paramsData.selectedPost.PostDescription}}</h3>
-    </ion-card>
+    </ion-card> -->
   </div>
 
-  <ion-item lines="none">
+  <!-- <ion-item lines="none">
     <ion-textarea  autocapitalize="on" class="custom-textarea" [(ngModel)]="paramsData.selectedPost.PostDescription"
       placeholder="Type description here">{{paramsData.selectedPost.PostDescription}}</ion-textarea>
-  </ion-item>
+  </ion-item> -->
 
   <app-multiple-media-upload 
    
