--- a/src/app/pages/sidemenu/events/event-list/event-list.page.scss
+++ b/src/app/pages/sidemenu/events/event-list/event-list.page.scss
@@ -37,9 +37,22 @@ ion-content {
                 color: #285078;
                 height: 14px;
                 margin-bottom: 8px;
+                font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 14px/24px var(--unnamed-font-family-sf-pro-display);
+color: var(--unnamed-color-285078);
+text-align: left;
+font: normal normal 600 14px/24px SF Pro Display;
+letter-spacing: 0.22px;
+color: #285078;
+                
                 &.completed-event {
-                  color: #E57676;
-                  height: 16px;
+                  // color: #E57676;
+                  // height: 16px;
+                  font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 14px/24px var(--unnamed-font-family-sf-pro-display);
+color: var(--unnamed-color-285078);
+text-align: left;
+font: normal normal 600 14px/24px SF Pro Display;
+letter-spacing: 0.22px;
+color: #285078;
                 }
               }
               h5 {
@@ -98,9 +111,34 @@ ion-segment-button.segment-button-checked ion-label {
   color: #03A9F5;
 }
 .my-label {
-  font: normal normal normal 16px/28px SF Pro Display;
-  letter-spacing: 0.22px;
-  color: #285078;
-  opacity: 1;
-  text-transform: capitalize;
+  // font: normal normal normal 16px/28px SF Pro Display;
+  // letter-spacing: 0.22px;
+  // color: #285078;
+  // opacity: 1;
+  // text-transform: capitalize;
+  font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 17px/24px var(--unnamed-font-family-sf-pro-display);
+text-align: left;
+font: normal normal 600 17px/24px SF Pro Display;
+letter-spacing: 0.27px;
+color: #505050;
+opacity: 1;
+}
+.days_left{
+  font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 12px/24px var(--unnamed-font-family-sf-pro-display);
+color: var(--unnamed-color-03a9f5);
+text-align: left;
+font: normal normal 600 12px/24px SF Pro Display;
+letter-spacing: 0.19px;
+color: #03A9F5;
+opacity: 1;
+font-weight: 600;
+}
+
+.dates{
+  font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 14px/24px var(--unnamed-font-family-sf-pro-display);
+color: var(--unnamed-color-285078);
+text-align: left;
+font: normal normal 600 16px/26px SF Pro Display;
+letter-spacing: 0.22px;
+color: #285078;
 }
