--- a/src/app/pages/map/greeting-view/greeting-view.component.html
+++ b/src/app/pages/map/greeting-view/greeting-view.component.html
@@ -5,7 +5,7 @@
 <ion-icon name="chat" *ngIf="isShowChatIcon == true || isUserConnected" class="greeting-icon"
     (click)="chatWithUser()"></ion-icon> -->
 
-<ion-icon name="greeting-blink" *ngIf="userInfo.Status === 'E' " class="greeting-icon"
+<ion-icon name="greeting-blink" class="greeting-icon"
     (click)="showGreetingActions()"></ion-icon>
 <!-- <ion-icon name="greeting-accept" *ngIf="isShowBlinkIcon == true" class="greeting-icon"
     (click)="showGreetingActions()"></ion-icon>
