--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -55,7 +55,12 @@
 
       <ion-row class="header-card-details">
         <div class="action-list">
-          <ion-icon name="greeting" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
+          <ion-icon [name]="getGreetingIcon()" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
+          <!-- <ion-icon *ngIf="currentItem.Greeting === 2 " name="greeting" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
+          <ion-icon *ngIf="currentItem.Greeting === 3 " name="greeting" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
+          <ion-icon *ngIf="currentItem.Greeting === 4 " name="greeting-blink" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon>
+          <ion-icon *ngIf="currentItem.Greeting === 5 " name="greeting-sent" style="font-size: 36px;" (click)="sendGreeting(currentItem)"></ion-icon> -->
+
           <ion-icon name="onhold" style="font-size: 36px;" (click)="tempClick()"></ion-icon>
           <ion-icon name="user-block" style="font-size: 36px;" (click)="tempClick()"></ion-icon>
 
